enum타입추가,신고기능타입에관한 기능 수정