@@ -2,33 +2,36 @@ package com.my.backend.service;
 
 import com.my.backend.dto.ReportDto;
 import com.my.backend.entity.Report;
+import com.my.backend.entity.Users;
+import com.my.backend.enums.ReportType;
 import com.my.backend.repository.ReportRepository;
 import com.my.backend.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import jakarta.persistence.EntityNotFoundException;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class ReportService {
 
     private final ReportRepository reportRepository;
     private final UserRepository userRepository;
 
+    // 신고 생성
     @Transactional
-    public ReportDto createReport(Long reporterId, Long targetId, String reason) {
-        User reporter = userRepository.findById(reporterId)
-                .orElseThrow(() -> new IllegalArgumentException("신고자 정보가 없습니다."));
-        User target = userRepository.findById(targetId)
-                .orElseThrow(() -> new IllegalArgumentException("대상 유저 정보가 없습니다."));
+    public ReportDto createReport(Long reporterId, Long refId, String reason, ReportType reportType) {
+        Users reporter = userRepository.findById(reporterId)
+                .orElseThrow(() -> new EntityNotFoundException("신고자 정보가 없습니다. id=" + reporterId));
 
         Report report = Report.builder()
-                .reporterId(reporter)
-                .targetId(target)
+                .user(reporter)
+                .refId(refId)
                 .reason(reason)
+                .reportType(reportType)
                 .status(false)
                 .build();
 
@@ -36,34 +39,46 @@ public class ReportService {
         return ReportDto.fromEntity(saved);
     }
 
-    public List<ReportDto> getReportsByTarget(Long targetId) {
-        return reportRepository.findByTargetIdUserId(targetId)
-                .stream()
+    // 특정 대상(refId)에 대한 신고 조회
+    public List<ReportDto> getReportsByTarget(Long refId) {
+        return reportRepository.findByRefId(refId).stream()
                 .map(ReportDto::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    // 신고 상태 변경 (관리자용)
     @Transactional
     public void updateReportStatus(Long reportId, boolean status) {
         Report report = reportRepository.findById(reportId)
-                .orElseThrow(() -> new IllegalArgumentException("신고가 존재하지 않습니다."));
+                .orElseThrow(() -> new EntityNotFoundException("신고가 존재하지 않습니다. id=" + reportId));
         report.setStatus(status);
     }
 
-    // 🔥 내가 신고한 목록 조회
+    // 내가 신고한 목록 조회 (마이페이지용)
     public List<ReportDto> getReportsByReporter(Long reporterId) {
-        return reportRepository.findByReporterIdUserId(reporterId)
-                .stream()
+        return reportRepository.findByUserUserId(reporterId).stream()
                 .map(ReportDto::fromEntity)
-                .collect(Collectors.toList());
-    }
-    // 관리자용 신고목록 조회
-    public List<ReportDto> getAllReports() {
-        return reportRepository.findAll()
-                .stream()
-                .map(ReportDto::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    // 관리자용 전체 신고 목록 조회
+    public List<ReportDto> getAllReports() {
+        return reportRepository.findAll().stream()
+                .map(ReportDto::fromEntity)
+                .toList();
+    }
+
+    // 신고 타입별 조회
+    public List<ReportDto> getReportsByType(ReportType reportType) {
+        return reportRepository.findByReportType(reportType).stream()
+                .map(ReportDto::fromEntity)
+                .toList();
+    }
+
+    // 처리 상태별 조회
+    public List<ReportDto> getReportsByStatus(boolean status) {
+        return reportRepository.findByStatus(status).stream()
+                .map(ReportDto::fromEntity)
+                .toList();
+    }
 }
-//
